# capybarauno

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration_parameters/: geberit  sapienzbot  triangolo
launch/: capybarauno_joyteleop.launch  capybarauno_joyteleop.launch~  capybarauno_joyteleop_triangle.launch  capybarauno_node.launch  capybarauno_node.launch~  capybarauno_odom_triangle.launch
msg/: capybara_ticks_signed.msg
src/: capybarauno_joy2ticks.cpp  capybarauno_joy_node.cpp  capybarauno_node.cpp  capybarauno_odom_node.cpp  capybarauno_robot.cpp  capybarauno_robot.h  capybarauno_solo.cpp  capybarauno_ticks2odo.cpp  capybarauno_twist2ticks.cpp  serial_interface.cpp  serial_interface.h
src/joy/: capybarauno_joy.h  capybarauno_joy_node.h  capybarauno_move.h
src/malComm/: dumb_payload.cpp  dummy_payload.cpp  heartbeat_payload.cpp  init_payload.cpp  mal_comm.cpp  mal_comm.h  mal_primitives.cpp  mal_primitives.h  serialStuff.cpp  serialStuff.h  speed_payload.cpp  state_payload.cpp
src/odom/: capybarauno_odom.h  capybarauno_odom_node.h
