<?xml version="1.0"?>
<package>
  <name>capybarauno</name>
  <version>1.0.0</version>
  <description>The capybarauno package</description>

  <maintainer email="maurilio.dicicco@gmail.com">Maurilio Di Cicco</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
